# openenv_content_moderator

./: .gitignore  Dockerfile  README.md  app.py  hf_deploy_status.txt  hf_output.txt  inference.py  inference_final_results.txt  inference_results.txt  inference_results_utf8.txt  inference_winning_final.txt  inference_winning_results.txt  inference_winning_results_utf8.txt  openenv.yaml  pyproject.toml  requirements.txt  test_minimal.py  test_samples.py
data/: training_samples.json
scripts/: baseline.py  benchmark_large_dataset.py  client_test_dataset.py  hf_deploy.py  set_hf_secret.py
server/: app.py
src/: __init__.py  env.py  loader.py  models.py  server.py  tasks.py  ui.py
