[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai_social_guard"
version = "2.1.0"
authors = [
  { name="MUVVA-MANIKANTA", email="manikanta@example.com" },
]
description = "AI content moderation agent for the OpenEnv Hackathon using Qwen-72B and RL-based automated grading."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "pydantic>=2.0.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "gradio>=4.0.0",
    "python-multipart>=0.0.6",
]

[project.urls]
"Homepage" = "https://github.com/MUVVA-MANIKANTA/openenv_content_moderator"
"Bug Tracker" = "https://github.com/MUVVA-MANIKANTA/openenv_content_moderator/issues"
